--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
     </section>
     <footer>
         <div class="footer-content">
-            <p>&copy;2024 PEDRO ROSEMBERG</p>
+            <p>&copy;2024 CODEVER. Developed by PEDRO ROSEMBERG</p>
             <div class="footer-links">
-                <a href="termos.html">Políticas e Termos</a>
+                <!---<a href="termos.html">Políticas e Termos</a>--->
             </div>
         </div>
     </footer>
