Update index.html - Address

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CODEVER - Software Development</title>
-        <meta author="Pedro Paulo Rosemberg da Silva Oliveira - pedro@codever.com.br">
+        <meta author="Pedro Paulo Rosemberg da Silva Oliveira - pedrorosemberg@aol.com">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="favicon.png.png" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -98,22 +98,22 @@
         <div class="contato-info">
             <div class="endereco">
                 <h3>Endereço</h3>
-                <p>Avenida Getúlio Vargas, 670, Savassi</p>
-                <p>Belo Horizonte/MG, CEP 30.112-024</p>
+                <p>Avenida Paulista, 779, Jardins</p>
+                <p>São Paulo/SP, CEP 01.311-100</p>
             </div>
             <div class="contato-detalhes">
                 <h3>Contato</h3>
                 <p><a href="mailto:contato@codever.com.br">contato@codever.com.br</a></p>
-                <p><a href="tel:+553132745832">(31) 3274-5832</a></p>
+                <p><a href="tel:+5511934738412">(11) 93473-8412</a></p>
             </div>
         </div>
         <div class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.1988247335613!2d-43.93799568508461!3d-19.93350868660697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa699dc27e21d85%3A0x6f966a1c6b08a3d!2sAv.%20Get%C3%BAlio%20Vargas%2C%20670%20-%20Savassi%2C%20Belo%20Horizonte%20-%20MG%2C%2030112-020!5e0!3m2!1sen!2sbr!4v1650000000000!5m2!1sen!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed/v1/place?key=YOUR_API_KEY&q=Avenida+Paulista,+779,+Jardins,+São+Paulo/SP,+CEP+01.311-100" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
     <footer>
         <div class="footer-content">
-            <p>&copy;2024 CODEVER. Developed by PEDRO ROSEMBERG</p>
+            <p>&copy;2024 CODEVER. Todos os direitos reservados.</p>
             <div class="footer-links">
                 <!---<a href="termos.html">Políticas e Termos</a>--->
             </div>
