Update the logotipe and style

--- a/public/index.html
+++ b/public/index.html
@@ -119,10 +119,8 @@
     </section>
     <footer>
         <div class="footer-content">
-            <p>&copy;2024 CODEVER. <br> Todos os direitos reservados.</p>
-            <div class="footer-links">
-                <!---<a href="termos.html">Políticas e Termos</a>--->
-            </div>
+            <p>&copy; 2024 CODEVER. Todos os direitos reservados.</p>
+            <img src="../assets/images/codever-footer.png" alt="Logo Codever" class="footer-logo">
         </div>
     </footer>
     <script src="../scripts/main.js"></script>
