[Update] ~Direcionamento dos arquivos styles.css e main.js

--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
         <meta name="keywords" content="desenvolvimento de software, soluções personalizadas, tecnologia, inovação">
         <meta name="author" content="Pedro Paulo Rosemberg da Silva Oliveira - pedrorosemberg@aol.com">
         <title>CODEVER - Desenvolvimento de Software Sob Medida</title>
-        <link rel="stylesheet" href="../assets/styles/styles.css" integrity="sha384-..." crossorigin="anonymous">
-        <link rel="icon" href="../assets/icons/favicon.png.png" type="image/png">
-        <link rel="stylesheet" href="../libs/font-awesome/css/all.min.css" integrity="sha384-..." crossorigin="anonymous">
+        <link rel="stylesheet" href="../styles/all.min.css">
+        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="icon" href="assets/icons/favicon.png.png" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha384-..." crossorigin="anonymous">
         <meta name="referrer" content="no-referrer">
     </head>
 <body>
     <div class="container">
         <header>
-            <img src="../assets/images/codever.png" alt="Logo da Codever" class="logo" width="auto" height="auto">
+            <img src="assets/images/codever.png" alt="Logo da Codever" class="logo" width="auto" height="auto">
             <nav class="menu">
                 <button id="menuToggle">☰</button>
                 <ul id="menuItems">
@@ -120,7 +120,7 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2024 CODEVER. Todos os direitos reservados.</p>
-            <img src="../assets/images/codever-footer.png" alt="Logo Codever" class="footer-logo">
+            <img src="assets/images/codever-footer.png" alt="Logo Codever" class="footer-logo">
         </div>
     </footer>
     <script src="../scripts/main.js"></script>
