--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
         <meta name="keywords" content="desenvolvimento de software, soluções personalizadas, tecnologia, inovação">
         <meta name="author" content="Pedro Paulo Rosemberg da Silva Oliveira - pedrorosemberg@aol.com">
         <title>CODEVER - Desenvolvimento de Software Sob Medida</title>
-        <link rel="stylesheet" href="../styles/all.min.css">
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="assets/icons/favicon.png.png" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha384-..." crossorigin="anonymous">
-        <meta name="referrer" content="no-referrer">
     </head>
 <body>
     <div class="container">
@@ -123,6 +121,6 @@
             <img src="assets/images/codever-footer.png" alt="Logo Codever" class="footer-logo">
         </div>
     </footer>
-    <script src="../scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
