[Update] ~Footer-Logo centered

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 CODEVER. Todos os direitos reservados.</p>
+            <p class="copyright">&copy; 2024 CODEVER. Todos os direitos reservados.</p>
             <img src="assets/images/codever-footer.png" alt="Logo Codever" class="footer-logo">
         </div>
     </footer>
