--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="flex justify-center items-center h-screen">
                         <div class="p-4 rounded-lg shadow-md flex items-center gap-4">
                             <!-- Menu Language -->
-                            <a href="https://www.en.codever.com.br" class="bg-indigo-100 rounded-full p-2 hover:bg-indigo-200 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-300 inline-block">
+                            <a href="https://en.codever.com.br" class="bg-indigo-100 rounded-full p-2 hover:bg-indigo-200 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-300 inline-block">
                                 <img src="https://flagcdn.com/w20/us.png" alt="USA Flag" class="w-6 h-4 object-cover">
                             </a>
                         </div>
