--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <p>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
                     <!-- Menu Language -->
                     <div class="flex justify-center items-center h-screen">
                         <div class="p-4 rounded-lg shadow-md flex items-center gap-4">
