Update metadax logo and info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Desenvolvemos softwares sob medida para ajudar sua empresa a inovar e crescer.">
         <meta name="keywords" content="desenvolvimento de software, soluções personalizadas, tecnologia, inovação">
-        <meta name="author" content="Pedro Paulo Rosemberg da Silva Oliveira - pedrorosemberg@aol.com">
+        <meta name="author" content="METADAX TECNOLOGIA E SERVIÇOS LTDA">
         <title>CODEVER - Desenvolvimento de Software Sob Medida</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="assets/icons/favicon.png.png" type="image/png">
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="assets/images/codever.png" alt="Logo da Codever" class="logo" width="auto" height="auto">
+            <img src="assets/images/codever.png" alt="METADAX" class="logo" width="auto" height="auto">
             <nav class="menu">
                 <button id="menuToggle">☰</button>
                 <ul id="menuItems">
@@ -102,23 +102,23 @@
         <div class="contato-info">
             <div class="endereco">
                 <h3>Endereço</h3>
-                <p>Avenida Paulista, 779, Jardins</p>
+                <p>Avenida Paulista, 1106, Bela Vista, Sala 01, Andar 16</p>
                 <p>São Paulo/SP, CEP 01.311-100</p>
             </div>
             <div class="contato-detalhes">
                 <h3>Contato</h3>
-                <p><a href="mailto:contato@codever.com.br">contato@codever.com.br</a></p>
-                <p><a href="tel:+5511934738412">(11) 93473-8412</a></p>
+                <p><a href="mailto:dev@metadax.com.br">dev@metadax.com.br</a></p>
+                <p><a href="tel:+551152535153">(11) 5253-5153</a></p>
             </div>
         </div>
         <div class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3657.0474101547065!2d-46.65316179064325!3d-23.566740678707685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sAvenida%20Paulista%2C%20779%2C%20Jardins%2C%20S%C3%A3o%20Paulo%2FSP%2C%20CEP%2001.311-100!5e0!3m2!1spt-BR!2sbr!4v1723509146421!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.9330123515056!2d-46.65510162602784!3d-23.56422717879782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7ddc19239%3A0xe60220ddf111bff7!2sEdif%C3%ADcio%20Paulista%201106!5e1!3m2!1spt-BR!2sbr!4v1745550969700!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
     <footer>
         <div class="footer-content">
-            <p class="copyright">&copy; 2024 CODEVER. Todos os direitos reservados.</p>
-            <img src="assets/images/codever-footer.png" alt="Logo Codever" class="footer-logo">
+            <p class="copyright">&copy; 2024 METADAX. Todos os direitos reservados.</p>
+            <img src="assets/images/codever-footer.png" alt="METADAX" class="footer-logo">
         </div>
     </footer>
     <script src="main.js"></script>
